--- a/index.html
+++ b/index.html
@@ -1,15 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TicketBlaze - Home</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TicketBlaze - Home</title>
+  <link rel="icon" href="assets\images\TicketBlaze-favicon.png" type="image/gif" sizes="100x100">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <script src="js/script.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="assets\images\TicketBlaze-logo-horizontal.png" alt="TicketBlaze logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/Ticketblaze">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Ticketblaze/faq.html">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Ticketblaze/service-status.html">Service Status</a>
+          </li>
+        </ul>
+        <button class="btn btn-primary" type="button">Open a ticket</button>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container main">
+    <!-- Tickets -->
+    <div class="container my-4">
+      <!-- Jumbotron shows only if there are no open tickets -->
+      <div class="p-5 my-4 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">Having a problem? Open a ticket!</h1>
+          <p class="col-md-8 fs-4">Wheter you are a company veteran or a newcomer, stuff breaks. If you are having a
+            problem with company IT infrastructure, we are here to help you with all your needs.</p>
+          <button class="btn btn-primary btn-lg" type="button" data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop">Open a support ticket</button>
+        </div>
+      </div>
+
+      <h1 class="mb-3">My open tickets: </h1>
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr>
+            <th scope="col" style="width: 15%;">Category</th>
+            <th scope="col" style="width: 40%;">Subject</th>
+            <th scope="col" style="width: 20%;">Status</th>
+            <th scope="col" style="width: 25%;">Last change</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chatModal">
+                Open Chat
+              </button></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry the Bird</td>
+            <td>Larry the Bird</td>
+            <td>Larry the Bird</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br><br><br>
+    <div class="container my-4">
+      <h1 class="mb-3">Important announcements:</h1>
+      <div class="row mb-2">
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary-emphasis">Local infrastructure interuption</strong>
+              <h3 class="mb-0">London Office to lose internet on Nov 5th!</h3>
+              <div class="my-2 text-body-secondary">Nov 1 2024.</div>
+              <p class="card-text mb-auto">There is a planned internet service interruption slated for Nov 5th. Only the
+                London Office will be affected. For more info contact the relevant department.</p>
+              <!-- <a href="#" class="icon-link gap-1 icon-link-hover stretched-link my-2">
+                Continue reading
+                <svg class="bi">
+                  <use xlink:href="#chevron-right"></use>
+                </svg>
+              </a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-success-emphasis">Global service interuption</strong>
+              <h3 class="mb-0">New Support site upgrade</h3>
+              <div class="my-2 text-body-secondary">Nov 11 2024.</div>
+              <p class="mb-auto">During the week we will be upgrading the support site. Site availability may me
+                limited. We ask you for patience. For more info contact the relevant department.</p>
+              <!-- <a href="#" class="icon-link gap-1 icon-link-hover stretched-link my-2">
+                Continue reading
+                <svg class="bi">
+                  <use xlink:href="#chevron-right"></use>
+                </svg>
+              </a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br><br>
+      <div class="row align-items-md-stretch">
+        <div class="col-md-12">
+          <div class="h-100 p-5 text-bg-dark rounded-3">
+            <h2>We have As to your Qs!</h2>
+            <p>Sometimes different people question the same things. To reduce strain on our support sytem, we would like
+              to invite you to firsly look at our FAQs section. People usually find the answers that they need there,
+              and if not, youa are free to open a support ticket.</p>
+            <button class="btn btn-outline-light" type="button" onclick="window.location.href='faq.html'">Frequently
+              Asked Questions</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Create a new support ticket</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form>
+            <div class="modal-body p-4">
+              <div class="row mb-3">
+                <div class="form-group col-md-5">
+                  <label for="inputName" class="mb-1">Name and surname</label>
+                  <input type="text" name="name" id="inputName" value="Faris Selimović" class="form-control disabled"
+                    disabled="disabled">
+                </div>
+                <div class="form-group col-md-7">
+                  <label for="inputEmail" class="mb-1">Email</label>
+                  <input type="email" name="email" id="inputEmail" value="contact@faris.ba"
+                    class="form-control disabled" disabled="disabled">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="form-group col-md-12">
+                  <label for="inputSubject" class="mb-1">Subject</label>
+                  <input type="text" name="subject" id="inputSubject" value="" class="form-control">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="form-group col-md-3">
+                  <label for="inputDepartment" class="mb-1">Department</label>
+                  <select name="deptid" id="inputDepartment" class="form-select">
+                    <option value="1" selected="selected">
+                      HR
+                    </option>
+                    <option value="2">
+                      HW Support
+                    </option>
+                    <option value="3">
+                      SW Support
+                    </option>
+                    <option value="4">
+                      Accounting
+                    </option>
+                  </select>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="inputRelatedService" class="mb-1">Help topics</label>
+                  <select name="relatedservice" id="inputRelatedService" class="form-select">
+                    <option value="">Drugo</option>
+                    <option value="S12162">
+                      HR - Complaint
+                    </option>
+                    <option>
+                      HR - Payment status
+                    </option>
+                    <option>
+                      HS - In office equpement
+                    </option>
+                    <option>
+                      HS - Work from home assitance
+                    </option>
+                    <option>
+                      Other
+                    </option>
+                  </select>
+                </div>
+                <div class="form-group col-md-3">
+                  <label for="inputPriority" class="mb-1">Importance</label>
+                  <select name="urgency" id="inputPriority" class="form-select">
+                    <option value="High">
+                      High
+                    </option>
+                    <option value="Medium" selected="selected">
+                      Medium
+                    </option>
+                    <option value="Low">
+                      Low
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="form-group mb-3">
+                <label for="inputMessage">Message</label>
+                <textarea name="message" id="inputMessage" rows="7" class="form-control markdown-editor md-input"
+                  data-auto-save-name="client_ticket_open" style="resize: vertical;"></textarea>
+              </div>
+
+              <div class="form-group mb-3">
+                <label for="inputAttachments">Attachments</label>
+                <div class="input-group">
+                  <input type="file" class="form-control" id="inputGroupFile02">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Add another</button>
+                </div>
+                <div class="text-muted">
+                  <small>Allowed file types: .jpg, .gif, .jpeg, .png, .pdf, .docx (Max file size:
+                    2048MB)</small>
+                </div>
+              </div>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="chatModal" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="chatModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Ticket #451-04</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="chat-message">
+              <p><strong>You:</strong> Hello, I need help with my account.</p>
+              <p><strong>Support:</strong> Sure, I'd be happy to help. What seems to be the problem?</p>
+              <!-- Add more messages as needed -->
+            </div>
+            <div class="reply">
+              <label for="replyMessage"><strong>Your Reply:</strong></label>
+              <textarea class="form-control" id="replyMessage" rows="3"></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Send Reply</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <footer class="py-3 mt-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="/Ticketblaze" class="nav-link px-2 text-body-secondary">Dashboard</a></li>
+      <li class="nav-item"><a href="/Ticketblaze/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+      <li class="nav-item"><a href="/Ticketblaze/service-status.html" class="nav-link px-2 text-body-secondary">Service
+          status</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">© 2024 TicketBlaze.com</p>
+  </footer>
+
+
+  <script src="js/script.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
