--- a/html/password-reset.html
+++ b/html/password-reset.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicketBlaze - Password reset</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                                 <label class="mb-2" for="email">Email address</label>
                                 <input type="email" class="form-control" id="email" placeholder="Enter your email">
                             </div>
-                            <button type="submit" class="btn btn-primary">Reset Password</button>
+                            <button type="button" class="btn btn-primary" id="passReset">Reset Password</button>
                         </form>
                     </div>
                 </div>
@@ -29,7 +29,12 @@
     </div>
 
     <!-- Bootstrap JS -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.bundle.min.js"></script>
+        <script>
+            document.getElementById('passReset').addEventListener('click', function() {
+                window.location.href = '../html/password-reset-confirm.html';
+            });
+        </script>
 </body>
 
 </html>
