--- a/html/password-reset-confirm.html
+++ b/html/password-reset-confirm.html
@@ -18,11 +18,13 @@
                         <form>
                             <div class="form-group mb-4">
                                 <label class="mb-2" for="password">New Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your new password">
+                                <input type="password" class="form-control" id="password"
+                                    placeholder="Enter your new password">
                             </div>
                             <div class="form-group mb-4">
                                 <label class="mb-2" for="confirm-password">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm your new password">
+                                <input type="password" class="form-control" id="confirm-password"
+                                    placeholder="Confirm your new password">
                             </div>
                             <button type="button" class="btn btn-primary" id="passReset">Reset Password</button>
                         </form>
@@ -33,12 +35,12 @@
     </div>
 
     <!-- Bootstrap JS -->
-        <script src="../js/bootstrap.bundle.min.js"></script>
-        <script>
-            document.getElementById('passReset').addEventListener('click', function() {
-                window.location.href = '../html/login.html';
-            });
-        </script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById('passReset').addEventListener('click', function () {
+            window.location.href = '../html/login.html';
+        });
+    </script>
 </body>
 
 </html>
