--- a/html/register.html
+++ b/html/register.html
@@ -26,7 +26,8 @@
                             </div>
                             <div class="form-group mb-4">
                                 <label class="mb-2" for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                                <input type="password" class="form-control" id="password"
+                                    placeholder="Enter your password">
                             </div>
                             <button type="button" class="btn btn-primary" id="signUpButton">Sign Up</button>
                         </form>
@@ -37,12 +38,12 @@
     </div>
 
     <!-- Bootstrap JS -->
-        <script src="../js/bootstrap.bundle.min.js"></script>
-        <script>
-            document.getElementById('signUpButton').addEventListener('click', function() {
-                window.location.href = '../html/login.html';
-            });
-        </script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById('signUpButton').addEventListener('click', function () {
+            window.location.href = '../html/login.html';
+        });
+    </script>
 </body>
 
 </html>
