--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
           </li>
         </ul>
         <button class="btn btn-primary btn-lg me-2" type="button" data-bs-toggle="modal"
-                    data-bs-target="#newTicketModal">Create a ticket</button>
+          data-bs-target="#newTicketModal">Create a ticket</button>
         <button class="btn btn-outline-primary btn-lg ms-2" type="button" id="logOutButton">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="btn-svg bi bi-box-arrow-right" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
-                      <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
-                    </svg>
-                  </button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="btn-svg bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
+            <path fill-rule="evenodd"
+              d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
+          </svg>
+        </button>
       </div>
     </div>
   </nav>
@@ -54,85 +57,84 @@
     </section>
   </main>
 
-<!-- Modal for ticket submission-->
-<div class="modal fade" id="newTicketModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content">
+  <!-- Modal for ticket submission-->
+  <div class="modal fade" id="newTicketModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
         <div class="modal-header">
-            <h1 class="modal-title fs-5" id="staticBackdropLabel">Create a new support ticket</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Create a new support ticket</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <form id="newTicketForm">
-            <div class="modal-body p-4">
-                <div class="row mb-3">
-                    <div class="form-group col-md-5">
-                        <label for="inputName" class="mb-1">Name and surname</label>
-                        <input type="text" name="name" id="inputName" value="Faris Selimović"
-                            class="form-control disabled" disabled="disabled">
-                    </div>
-                    <div class="form-group col-md-7">
-                        <label for="inputEmail" class="mb-1">Email</label>
-                        <input type="email" name="email" id="inputEmail" value="contact@faris.ba"
-                            class="form-control disabled" disabled="disabled">
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="form-group col-md-12">
-                        <label for="inputSubject" class="mb-1">Subject</label>
-                        <input type="text" name="subject" id="inputSubject" value="" class="form-control">
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="form-group col-md-3">
-                        <label for="inputDepartment" class="mb-1">Department</label>
-                        <select name="deptid" id="inputDepartment" class="form-select">
-                            <option value="1" selected="selected">
-                                HR
-                            </option>
-                            <option value="2">
-                                HW Support
-                            </option>
-                            <option value="3">
-                                SW Support
-                            </option>
-                            <option value="4">
-                                Accounting
-                            </option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="inputPriority" class="mb-1">Importance</label>
-                        <select name="urgency" id="inputPriority" class="form-select">
-                            <option value="High">
-                                High
-                            </option>
-                            <option value="Medium" selected="selected">
-                                Medium
-                            </option>
-                            <option value="Low">
-                                Low
-                            </option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="inputMessage">Message</label>
-                    <textarea name="message" id="inputMessage" rows="7"
-                        class="form-control markdown-editor md-input" data-auto-save-name="client_ticket_open"
-                        style="resize: vertical;"></textarea>
-                </div>
-
+          <div class="modal-body p-4">
+            <div class="row mb-3">
+              <div class="form-group col-md-5">
+                <label for="inputName" class="mb-1">Name and surname</label>
+                <input type="text" name="name" id="inputName" value="Faris Selimović" class="form-control disabled"
+                  disabled="disabled">
+              </div>
+              <div class="form-group col-md-7">
+                <label for="inputEmail" class="mb-1">Email</label>
+                <input type="email" name="email" id="inputEmail" value="contact@faris.ba" class="form-control disabled"
+                  disabled="disabled">
+              </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Submit</button>
+            <div class="row mb-3">
+              <div class="form-group col-md-12">
+                <label for="inputSubject" class="mb-1">Subject</label>
+                <input type="text" name="subject" id="inputSubject" value="" class="form-control">
+              </div>
             </div>
+            <div class="row mb-3">
+              <div class="form-group col-md-3">
+                <label for="inputDepartment" class="mb-1">Department</label>
+                <select name="deptid" id="inputDepartment" class="form-select">
+                  <option value="1" selected="selected">
+                    HR
+                  </option>
+                  <option value="2">
+                    HW Support
+                  </option>
+                  <option value="3">
+                    SW Support
+                  </option>
+                  <option value="4">
+                    Accounting
+                  </option>
+                </select>
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputPriority" class="mb-1">Importance</label>
+                <select name="urgency" id="inputPriority" class="form-select">
+                  <option value="High">
+                    High
+                  </option>
+                  <option value="Medium" selected="selected">
+                    Medium
+                  </option>
+                  <option value="Low">
+                    Low
+                  </option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group mb-3">
+              <label for="inputMessage">Message</label>
+              <textarea name="message" id="inputMessage" rows="7" class="form-control markdown-editor md-input"
+                data-auto-save-name="client_ticket_open" style="resize: vertical;"></textarea>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
         </form>
+      </div>
     </div>
-</div>
-</div>
+  </div>
 
 
   <footer class="py-3 mt-4">
@@ -145,53 +147,53 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <p class="text-center text-body-secondary">© 2024 TicketBlaze.com</p>
   </footer>
 
-  <script  src="js/script.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/jquery.spapp.js"></script>
   <script>
     var app = $.spapp({
       defaultView: "home",
-    templateDir  : "./html/",
-    pageNotFound : "error_404"
-});
+      templateDir: "./html/",
+      pageNotFound: "error_404"
+    });
 
-app.run();
+    app.run();
 
-document.querySelector('#newTicketForm').addEventListener('submit', function(event) {
-    event.preventDefault();
+    document.querySelector('#newTicketForm').addEventListener('submit', function (event) {
+      event.preventDefault();
 
-    let name = document.querySelector('#inputName').value;
-    let email = document.querySelector('#inputEmail').value;
-    let subject = document.querySelector('#inputSubject').value;
-    let department = document.querySelector('#inputDepartment').value;
-    let priority = document.querySelector('#inputPriority').value;
-    let message = document.querySelector('#inputMessage').value;
+      let name = document.querySelector('#inputName').value;
+      let email = document.querySelector('#inputEmail').value;
+      let subject = document.querySelector('#inputSubject').value;
+      let department = document.querySelector('#inputDepartment').value;
+      let priority = document.querySelector('#inputPriority').value;
+      let message = document.querySelector('#inputMessage').value;
 
-    let ticket = {
+      let ticket = {
         name: name,
         email: email,
         subject: subject,
         department: department,
         priority: priority,
         message: message
-    };
+      };
 
-    fetch('yourTicketsUrl', {
+      fetch('yourTicketsUrl', {
         method: 'POST',
         headers: {
-            'Content-Type': 'application/json'
+          'Content-Type': 'application/json'
         },
         body: JSON.stringify(ticket)
-    })
-    .then(response => response.json())
-    .then(data => console.log(data))
-    .catch(error => console.error(error));
-});
+      })
+        .then(response => response.json())
+        .then(data => console.log(data))
+        .catch(error => console.error(error));
+    });
 
-document.querySelector('#logOutButton').addEventListener('click', function() {
-    window.location.href = 'html/login.html';
-});
+    document.querySelector('#logOutButton').addEventListener('click', function () {
+      window.location.href = 'html/login.html';
+    });
 
   </script>
 </body>
