--- a/html/faq.html
+++ b/html/faq.html
@@ -17,7 +17,9 @@
 </div>
 
 <script>
-  fetch('./json/faq.json')
+  fetch('./backend/get_faq.php', {
+      method: 'GET',
+    })
     .then(response => response.json())
     .then(data => {
       let output = '';
