--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/spapp.css">
+
+  <script src="js/jquery-3.7.1.min.js"></script>
+  <script src="js/jquery.spapp.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -90,16 +95,16 @@
               <div class="form-group col-md-3">
                 <label for="inputDepartment" class="mb-1">Department</label>
                 <select name="deptid" id="inputDepartment" class="form-select">
-                  <option value="1" selected="selected">
+                  <option value="HR" selected="selected">
                     HR
                   </option>
-                  <option value="2">
-                    HW Support
+                  <option value="Hardware Support">
+                    Hardware Support
                   </option>
-                  <option value="3">
-                    SW Support
+                  <option value="Software Support">
+                    Software Support
                   </option>
-                  <option value="4">
+                  <option value="Accounting">
                     Accounting
                   </option>
                 </select>
@@ -125,11 +130,7 @@
               <textarea name="message" id="inputMessage" rows="7" class="form-control markdown-editor md-input"
                 data-auto-save-name="client_ticket_open" style="resize: vertical;"></textarea>
             </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
           </div>
         </form>
       </div>
@@ -147,10 +148,7 @@
     <p class="text-center text-body-secondary">© 2024 TicketBlaze.com</p>
   </footer>
 
-  <script src="js/script.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/jquery-3.7.1.min.js"></script>
-  <script src="js/jquery.spapp.js"></script>
+
   <script>
     var app = $.spapp({
       defaultView: "home",
@@ -160,39 +158,57 @@
 
     app.run();
 
-    document.querySelector('#newTicketForm').addEventListener('submit', function (event) {
-      event.preventDefault();
-
-      let name = document.querySelector('#inputName').value;
-      let email = document.querySelector('#inputEmail').value;
-      let subject = document.querySelector('#inputSubject').value;
-      let department = document.querySelector('#inputDepartment').value;
-      let priority = document.querySelector('#inputPriority').value;
-      let message = document.querySelector('#inputMessage').value;
-
-      let ticket = {
-        name: name,
-        email: email,
-        subject: subject,
-        department: department,
-        priority: priority,
-        message: message
-      };
-
-      fetch('yourTicketsUrl', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(ticket)
-      })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error(error));
-    });
-
     document.querySelector('#logOutButton').addEventListener('click', function () {
       window.location.href = 'html/login.html';
+    });
+
+    $(document).ready(function () {
+      $("#newTicketForm").on("submit", function (event) {
+        console.log("Form submission prevented");
+        event.preventDefault();
+
+        var formData = {
+          subject: $('#inputSubject').val(),
+          department: $('#inputDepartment').val(),
+          importance: $('#inputPriority').val(),
+          message: $('#inputMessage').val()
+        };
+        console.log(formData);
+
+        $.post(
+          "./backend/add_ticket.php",
+          formData,
+          function (response) {
+            // This is the success callback. You can use the 'response' variable to access the response from your server.
+            response = response.slice(1, -1);
+            console.log(response);
+            var formData = {
+              ticketId: Number(response),
+              message: $("#inputMessage").val(),
+              sent_by: 5,
+            };
+            console.log(formData);
+            
+            $.post(
+              "./backend/add_message.php",
+              formData,
+              function (response) {
+                // This is the success callback. You can use the 'response' variable to access the response from your server.
+                console.log(response);
+              }
+            ).fail(function () {
+              // This is the failure callback. It's called if the request fails, for example, if the URL is wrong or the server doesn't respond.
+              console.log("Error occurred");
+            });
+            $('#inputSubject').val('');
+            $('#inputMessage').val('');
+            resetTickets();
+          }
+        ).fail(function () {
+          // This is the failure callback. It's called if the request fails, for example, if the URL is wrong or the server doesn't respond.
+          console.log("Error occurred");
+        });
+      });
     });
 
   </script>
