--- a/html/faq.html
+++ b/html/faq.html
@@ -17,7 +17,7 @@
 </div>
 
 <script>
-  fetch('./backend/get_faq.php', {
+  fetch('./backend/faq', {
       method: 'GET',
     })
     .then(response => response.json())
