--- a/html/home.html
+++ b/html/home.html
@@ -146,6 +146,7 @@
                 let currentTicketId = null;
                 if (data.length > 0) {
                     document.querySelector('#jumbotron').style.display = 'none'; // Hide the jumbotron
+                    document.querySelector('#tickets-section').style.display = 'block'; // Show the tickets section
                 } else {
                     document.querySelector('#tickets-section').style.display = 'none'; // Hide the tickets section
                     document.querySelector('#jumbotron').style.display = 'block'; // Show the jumbotron
